[gd_scene load_steps=4 format=3 uid="uid://cm5n8p7rar3s4"]

[ext_resource type="Texture2D" uid="uid://ytp1tss38jj3" path="res://asset/UI/main menu/Level.png" id="1_1f016"]
[ext_resource type="Script" uid="uid://dxsqramg7ojv1" path="res://scripts/UI/LevelButton.gd" id="1_level_button"]
[ext_resource type="FontFile" uid="uid://bidkq3k8s4itr" path="res://asset/Font/Lovato-Bold.ttf" id="2_mic1q"]

[node name="LevelButton" type="TextureRect"]
custom_minimum_size = Vector2(452, 452)
offset_right = 452.0
offset_bottom = 452.0
mouse_filter = 0
mouse_default_cursor_shape = 4
texture = ExtResource("1_1f016")
stretch_mode = 3
script = ExtResource("1_level_button")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 449.0
offset_bottom = 449.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="LevelNumberLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_mic1q")
theme_override_font_sizes/font_size = 48
text = "Level 1"
horizontal_alignment = 1

[node name="StarsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Star1" type="TextureRect" parent="MarginContainer/VBoxContainer/StarsContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="MarginContainer/VBoxContainer/StarsContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="MarginContainer/VBoxContainer/StarsContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 449.0
offset_bottom = 449.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
flat = true

[node name="LockedOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 449.0
offset_bottom = 449.0
mouse_filter = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="LockedOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LockIcon" type="TextureRect" parent="LockedOverlay/CenterContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
